--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,39 +50,59 @@
     </div>
 
     <!-- beyou okr -->
-    <div class="col-6 col-md-4 col-xl-3">
+    <!-- <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/beyou.png'"
         [desc]="'OKR desktop'"
         [link]="'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=0%3A1&node-id=2%3A3&viewport=241%2C48%2C0.1&scaling=scale-down&starting-point-node-id=2%3A3'">
       </app-project-btn>
-    </div>
+    </div> -->
 
     <!-- beyou okr mobile -->
-    <div class="col-6 col-md-4 col-xl-3">
+    <!-- <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/beyou.png'"
         [desc]="'OKR mobile'"
         [link]="'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=6%3A4&node-id=6%3A38&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=6%3A38'">
       </app-project-btn>
-    </div>
+    </div> -->
 
     <!-- beyou challenges mobile -->
-    <div class="col-6 col-md-4 col-xl-3">
+    <!-- <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/beyou.png'"
         [desc]="'Challenge mobile'"
         [link]="'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=244%3A1103&node-id=244%3A1104&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=244%3A1104'">
       </app-project-btn>
-    </div>
+    </div> -->
 
     <!-- beyou challenges desktop -->
-    <div class="col-6 col-md-4 col-xl-3">
+    <!-- <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/beyou.png'"
         [desc]="'Challenge desktop'"
         [link]="'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=459%3A532&node-id=459%3A533&viewport=241%2C48%2C0.52&scaling=min-zoom&starting-point-node-id=459%3A533'">
       </app-project-btn>
+    </div> -->
+
+    <!-- beyou -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-multibtn 
+        [imgSrc]="'/assets/img/beyou.png'"
+        [desc]="'People analytics'"
+        [links]="[
+          'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=0%3A1&node-id=2%3A3&viewport=241%2C48%2C0.1&scaling=scale-down&starting-point-node-id=2%3A3',
+          'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=6%3A4&node-id=6%3A38&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=6%3A38',
+          'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=244%3A1103&node-id=244%3A1104&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=244%3A1104',
+          'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=459%3A532&node-id=459%3A533&viewport=241%2C48%2C0.52&scaling=min-zoom&starting-point-node-id=459%3A533'
+        ]"
+        [linksDesc]="[
+          'OKR desktop',
+          'OKR mobile',
+          'Challenge mobile',
+          'Challenge desktop'
+        ]">
+      </app-project-multibtn>
     </div>
 
     <!-- bigbrain app -->
