--- a/src/app/project-multibtn/project-multibtn.component.css
+++ b/src/app/project-multibtn/project-multibtn.component.css
@@ -6,14 +6,9 @@ a {
 .prj-btn {
     border-radius: 4px;
     box-shadow: 0 0 2px 2px rgb(0 0 0 / 10%);
-    cursor: pointer;
     margin-bottom: 40px;
     background-color: #fff;
-}
-
-.prj-btn:hover .desc-container {
-    border-radius: 0 0 4px 4px;
-    background-color: #2c2d31;
+    position: relative;
 }
 
 .img-container {
@@ -36,10 +31,32 @@ a {
     padding: 10px 20px;
     background-color: #55565a;
     color: white;
-    transition: all  0.3s ease;
 }
 
 .desc {
     text-align: center;
     font-size: 14px;
+}
+
+.dots-container {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
+
+.dot {
+    padding: 5px 10px;
+    border-radius: 4px;
+    background-color: #55565a;
+    cursor: pointer;
+    margin-bottom: 5px;
+    color: white;
+    font-size: 10px;
+    opacity: .3;
+    transition: all  0.3s ease;
+}
+
+.dot:hover {
+    background-color: #2c2d31;
+    opacity: 1;
 }
