--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,42 +49,6 @@
       </app-project-btn>
     </div>
 
-    <!-- beyou okr -->
-    <!-- <div class="col-6 col-md-4 col-xl-3">
-      <app-project-btn 
-        [imgSrc]="'/assets/img/beyou.png'"
-        [desc]="'OKR desktop'"
-        [link]="'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=0%3A1&node-id=2%3A3&viewport=241%2C48%2C0.1&scaling=scale-down&starting-point-node-id=2%3A3'">
-      </app-project-btn>
-    </div> -->
-
-    <!-- beyou okr mobile -->
-    <!-- <div class="col-6 col-md-4 col-xl-3">
-      <app-project-btn 
-        [imgSrc]="'/assets/img/beyou.png'"
-        [desc]="'OKR mobile'"
-        [link]="'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=6%3A4&node-id=6%3A38&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=6%3A38'">
-      </app-project-btn>
-    </div> -->
-
-    <!-- beyou challenges mobile -->
-    <!-- <div class="col-6 col-md-4 col-xl-3">
-      <app-project-btn 
-        [imgSrc]="'/assets/img/beyou.png'"
-        [desc]="'Challenge mobile'"
-        [link]="'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=244%3A1103&node-id=244%3A1104&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=244%3A1104'">
-      </app-project-btn>
-    </div> -->
-
-    <!-- beyou challenges desktop -->
-    <!-- <div class="col-6 col-md-4 col-xl-3">
-      <app-project-btn 
-        [imgSrc]="'/assets/img/beyou.png'"
-        [desc]="'Challenge desktop'"
-        [link]="'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=459%3A532&node-id=459%3A533&viewport=241%2C48%2C0.52&scaling=min-zoom&starting-point-node-id=459%3A533'">
-      </app-project-btn>
-    </div> -->
-
     <!-- beyou -->
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-multibtn 
@@ -94,13 +58,15 @@
           'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=0%3A1&node-id=2%3A3&viewport=241%2C48%2C0.1&scaling=scale-down&starting-point-node-id=2%3A3',
           'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=6%3A4&node-id=6%3A38&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=6%3A38',
           'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=244%3A1103&node-id=244%3A1104&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=244%3A1104',
-          'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=459%3A532&node-id=459%3A533&viewport=241%2C48%2C0.52&scaling=min-zoom&starting-point-node-id=459%3A533'
+          'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=459%3A532&node-id=459%3A533&viewport=241%2C48%2C0.52&scaling=min-zoom&starting-point-node-id=459%3A533',
+          'https://www.figma.com/proto/l8QqW5cNlQQI7erNWyBtDZ/2206_BY2?page-id=0%3A1&node-id=9%3A272&viewport=-49%2C216%2C0.09&scaling=min-zoom&starting-point-node-id=9%3A272'
         ]"
         [linksDesc]="[
           'OKR desktop',
           'OKR mobile',
           'Challenge mobile',
-          'Challenge desktop'
+          'Challenge desktop',
+          'Webapp v2'
         ]">
       </app-project-multibtn>
     </div>
