--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,13 +71,29 @@
       </app-project-multibtn>
     </div>
 
-    <!-- bigbrain app -->
+    <!-- bigbrain -->
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/bigbrain.png'"
         [desc]="'App hospitality'"
         [link]="'https://www.figma.com/proto/A0tmvYaStvaxWYsccpoCTj/2104_BBA?page-id=0%3A1&node-id=2%3A3&viewport=241%2C48%2C0.19&scaling=scale-down&starting-point-node-id=2%3A3'">
       </app-project-btn>
+    </div>
+
+    <!-- domya -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-multibtn 
+        [imgSrc]="'/assets/img/domya.svg'"
+        [desc]="'App hospitality'"
+        [links]="[
+          'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOM?page-id=0%3A1&node-id=2%3A2&viewport=-3287%2C323%2C0.87&scaling=scale-down&starting-point-node-id=2%3A2',
+          'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOM?page-id=3%3A2&node-id=17%3A521&viewport=280%2C354%2C0.25&scaling=scale-down&starting-point-node-id=17%3A521',
+        ]"
+        [linksDesc]="[
+          'Wireframe app mobile',
+          'Wireframe sito concierge'
+        ]">
+      </app-project-multibtn>
     </div>
   </div>
   
