--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,15 +55,15 @@
         [imgSrc]="'/assets/img/beyou.png'"
         [desc]="'People analytics'"
         [links]="[
-          'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=0%3A1&node-id=2%3A3&viewport=241%2C48%2C0.1&scaling=scale-down&starting-point-node-id=2%3A3',
           'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=6%3A4&node-id=6%3A38&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=6%3A38',
+          'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=0%3A1&node-id=2%3A3&viewport=241%2C48%2C0.1&scaling=scale-down&starting-point-node-id=2%3A3',
           'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=244%3A1103&node-id=244%3A1104&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=244%3A1104',
           'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=459%3A532&node-id=459%3A533&viewport=241%2C48%2C0.52&scaling=min-zoom&starting-point-node-id=459%3A533',
           'https://www.figma.com/proto/l8QqW5cNlQQI7erNWyBtDZ/2206_BY2?page-id=0%3A1&node-id=9%3A272&viewport=-49%2C216%2C0.09&scaling=min-zoom&starting-point-node-id=9%3A272'
         ]"
         [linksDesc]="[
-          'OKR desktop',
           'OKR mobile',
+          'OKR desktop',
           'Challenge mobile',
           'Challenge desktop',
           'Webapp v2'
@@ -88,10 +88,12 @@
         [links]="[
           'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOM?page-id=0%3A1&node-id=2%3A2&viewport=-3287%2C323%2C0.87&scaling=scale-down&starting-point-node-id=2%3A2',
           'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOM?page-id=3%3A2&node-id=17%3A521&viewport=280%2C354%2C0.25&scaling=scale-down&starting-point-node-id=17%3A521',
+          'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOM?page-id=153%3A2&node-id=157%3A2&viewport=70%2C227%2C0.49&scaling=scale-down&starting-point-node-id=157%3A2'
         ]"
         [linksDesc]="[
-          'Wireframe app mobile',
-          'Wireframe sito concierge'
+          'App mobile',
+          'Sito concierge',
+          'Tv hospitality'
         ]">
       </app-project-multibtn>
     </div>
@@ -110,6 +112,15 @@
           'Backend'
         ]">
       </app-project-multibtn>
+    </div>
+
+    <!-- d&g -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/dng.png'"
+        [desc]="'Price tracker'"
+        [link]="'https://www.figma.com/proto/gTNdXAUX91ReFjKgLuPYsf/D%26G---Price-Tracker-Dashboard?node-id=1%3A36&scaling=scale-down&page-id=0%3A1'">
+      </app-project-btn>
     </div>
   </div>
   
