--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
     <!-- nft -->
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
-        [imgSrc]="'/assets/img/nft.gif'"
+        [imgSrc]="'/assets/img/nft.png'"
         [desc]="'NFT'"
         [link]="'https://opensea.io/collection/algorithmic-tokens'">
       </app-project-btn>
@@ -83,7 +83,7 @@
     <!-- domya -->
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-multibtn 
-        [imgSrc]="'/assets/img/domya.svg'"
+        [imgSrc]="'/assets/img/domya.png'"
         [desc]="'App hospitality'"
         [links]="[
           'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOM?page-id=0%3A1&node-id=172%3A81&viewport=426%2C223%2C0.18&scaling=scale-down&starting-point-node-id=172%3A81',
@@ -98,10 +98,10 @@
       </app-project-multibtn>
     </div>
 
-    <!-- cargeas -->
+    <!-- isp -->
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-multibtn 
-        [imgSrc]="'/assets/img/isp.jpg'"
+        [imgSrc]="'/assets/img/isp.png'"
         [desc]="'File system explorer'"
         [links]="[
           'https://github.com/bidcompany/file-system-explorer-frontend',
