--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,14 +59,16 @@
           'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=0%3A1&node-id=2%3A3&viewport=241%2C48%2C0.1&scaling=scale-down&starting-point-node-id=2%3A3',
           'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=244%3A1103&node-id=244%3A1104&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=244%3A1104',
           'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=459%3A532&node-id=459%3A533&viewport=241%2C48%2C0.52&scaling=min-zoom&starting-point-node-id=459%3A533',
-          'https://www.figma.com/proto/l8QqW5cNlQQI7erNWyBtDZ/2206_BY2?page-id=0%3A1&node-id=9%3A272&viewport=-49%2C216%2C0.09&scaling=min-zoom&starting-point-node-id=9%3A272'
+          'https://www.figma.com/proto/l8QqW5cNlQQI7erNWyBtDZ/2206_BY2?page-id=0%3A1&node-id=9%3A272&viewport=-49%2C216%2C0.09&scaling=min-zoom&starting-point-node-id=9%3A272',
+          'https://www.figma.com/proto/gGRQslVAhmzPa5us8eGTu9/2302_BYS?page-id=0%3A1&node-id=5-329&viewport=47%2C354%2C0.12&scaling=scale-down&starting-point-node-id=5%3A329'
         ]"
         [linksDesc]="[
           'OKR mobile',
           'OKR desktop',
           'Challenge mobile',
           'Challenge desktop',
-          'Webapp v2'
+          'Webapp v2',
+          'Social'
         ]">
       </app-project-multibtn>
     </div>
@@ -120,6 +122,15 @@
         [imgSrc]="'/assets/img/dng.png'"
         [desc]="'Price tracker'"
         [link]="'https://www.figma.com/proto/gTNdXAUX91ReFjKgLuPYsf/D%26G---Price-Tracker-Dashboard?node-id=1%3A36&scaling=scale-down&page-id=0%3A1'">
+      </app-project-btn>
+    </div>
+
+    <!-- knowhere -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/knowhere.png'"
+        [desc]="'Knowledge sharing'"
+        [link]="'https://www.figma.com/proto/Pkuv9ydOKiM7iggcyBZVf3/2301_KWW?page-id=0%3A1&node-id=1-3&viewport=198%2C202%2C0.13&scaling=scale-down&starting-point-node-id=1%3A3'">
       </app-project-btn>
     </div>
   </div>
