--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -133,6 +133,15 @@
         [link]="'https://www.figma.com/proto/Pkuv9ydOKiM7iggcyBZVf3/2301_KWW?page-id=0%3A1&node-id=1-3&viewport=198%2C202%2C0.13&scaling=scale-down&starting-point-node-id=1%3A3'">
       </app-project-btn>
     </div>
+
+    <!-- juventus -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/juventus.png'"
+        [desc]="'Dashboard hospitality'"
+        [link]="'https://www.figma.com/proto/xd3t9GCmQN0qBfhhUcPX7t/JHotel?node-id=2-11&scaling=scale-down&page-id=0%3A1&starting-point-node-id=2%3A11'">
+      </app-project-btn>
+    </div>
   </div>
   
   <router-outlet></router-outlet>
