--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -142,6 +142,15 @@
         [link]="'https://www.figma.com/proto/xd3t9GCmQN0qBfhhUcPX7t/JHotel?node-id=2-11&scaling=scale-down&page-id=0%3A1&starting-point-node-id=2%3A11'">
       </app-project-btn>
     </div>
+
+    <!-- esg -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/esg.png'"
+        [desc]="'Surveys'"
+        [link]="'https://www.figma.com/proto/UHfkxqnHYe4TADhelVsZZC/Arwin?node-id=13-51&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=13%3A51'">
+      </app-project-btn>
+    </div>
   </div>
   
   <router-outlet></router-outlet>
