--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -147,7 +147,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/esg.png'"
-        [desc]="'Surveys'"
+        [desc]="'ESG surveys'"
         [link]="'https://www.figma.com/proto/UHfkxqnHYe4TADhelVsZZC/Arwin?node-id=13-51&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=13%3A51'">
       </app-project-btn>
     </div>
