--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -151,6 +151,24 @@
         [link]="'https://www.figma.com/proto/UHfkxqnHYe4TADhelVsZZC/Arwin?node-id=13-51&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=13%3A51'">
       </app-project-btn>
     </div>
+
+    <!-- ermes -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/ermes.png'"
+        [desc]="'Audit scheduling'"
+        [link]="'https://www.figma.com/proto/4BdTqm0EKWA5J5NEfFbSp7/Ermes?node-id=2-2&starting-point-node-id=2%3A2&scaling=scale-down'">
+      </app-project-btn>
+    </div>
+
+    <!-- mastercard -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/mastercard.png'"
+        [desc]="'Dashboard finance'"
+        [link]="'https://www.figma.com/proto/SST0FK6x9rvl98UhXk5sXe/2304_MST?page-id=0%3A1&node-id=1-3&viewport=223%2C206%2C0.06&scaling=scale-down&starting-point-node-id=1%3A3'">
+      </app-project-btn>
+    </div>
   </div>
   
   <router-outlet></router-outlet>
