--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -169,6 +169,24 @@
         [link]="'https://www.figma.com/proto/SST0FK6x9rvl98UhXk5sXe/2304_MST?page-id=0%3A1&node-id=1-3&viewport=223%2C206%2C0.06&scaling=scale-down&starting-point-node-id=1%3A3'">
       </app-project-btn>
     </div>
+
+    <!-- chatto -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-multibtn 
+        [imgSrc]="'/assets/img/chatto.png'"
+        [desc]="'ChatGPT for business'"
+        [links]="[
+          'https://www.figma.com/proto/osGY6Faiye05jSdtPgLj4L/Chatto-Platform?page-id=0%3A1&type=design&node-id=11-60&viewport=371%2C95%2C0.12&scaling=scale-down&starting-point-node-id=11%3A60',
+          'https://www.figma.com/proto/osGY6Faiye05jSdtPgLj4L/Chatto-Platform?page-id=99%3A553&type=design&node-id=99-636&viewport=1158%2C282%2C0.65&scaling=scale-down&starting-point-node-id=1%3A2',
+          'https://www.figma.com/proto/osGY6Faiye05jSdtPgLj4L/Chatto-Platform?page-id=120%3A1686&type=design&node-id=120-1754&viewport=1243%2C491%2C0.64&scaling=scale-down&starting-point-node-id=120%3A1754'
+        ]"
+        [linksDesc]="[
+          'Builder',
+          'Prompt engineer',
+          'User'
+        ]">
+      </app-project-multibtn>
+    </div>
   </div>
   
   <router-outlet></router-outlet>
