--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -192,7 +192,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/sace.png'"
-        [desc]="'ChatGPT for balance'"
+        [desc]="'Chatto for balance sheets'"
         [link]="'https://www.figma.com/proto/rYj52pvKKz3xHhuShXbEYm/2307_SAC?page-id=0%3A1&type=design&node-id=1-2&viewport=827%2C277%2C0.2&t=2KSkwk1RJGLYe3PF-1&scaling=scale-down&starting-point-node-id=1%3A2'">
       </app-project-btn>
     </div>
