--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -174,7 +174,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-multibtn 
         [imgSrc]="'/assets/img/chatto.png'"
-        [desc]="'ChatGPT for business'"
+        [desc]="'Generative AI'"
         [links]="[
           'https://www.figma.com/proto/osGY6Faiye05jSdtPgLj4L/Chatto-Platform?page-id=0%3A1&type=design&node-id=11-60&viewport=371%2C95%2C0.12&scaling=scale-down&starting-point-node-id=11%3A60',
           'https://www.figma.com/proto/osGY6Faiye05jSdtPgLj4L/Chatto-Platform?page-id=99%3A553&type=design&node-id=99-636&viewport=1158%2C282%2C0.65&scaling=scale-down&starting-point-node-id=1%3A2',
@@ -192,7 +192,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/sace.png'"
-        [desc]="'Chatto for balance sheets'"
+        [desc]="'AI for balance sheets'"
         [link]="'https://www.figma.com/proto/rYj52pvKKz3xHhuShXbEYm/2307_SAC?page-id=0%3A1&type=design&node-id=1-2&viewport=827%2C277%2C0.2&t=2KSkwk1RJGLYe3PF-1&scaling=scale-down&starting-point-node-id=1%3A2'">
       </app-project-btn>
     </div>
