--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -196,6 +196,15 @@
         [link]="'https://www.figma.com/proto/rYj52pvKKz3xHhuShXbEYm/2307_SAC?page-id=0%3A1&type=design&node-id=1-2&viewport=827%2C277%2C0.2&t=2KSkwk1RJGLYe3PF-1&scaling=scale-down&starting-point-node-id=1%3A2'">
       </app-project-btn>
     </div>
+
+    <!-- showcase -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/showcase.png'"
+        [desc]="'Solutions showcase'"
+        [link]="'https://www.figma.com/proto/I9903lrDp4l3dGeHtvSl0z/2307_KW2?page-id=0%3A1&type=design&node-id=1-2&viewport=511%2C382%2C0.2&t=eCGHP1gJEEbZxFy4-1&scaling=scale-down&mode=design'">
+      </app-project-btn>
+    </div>
   </div>
   
   <router-outlet></router-outlet>
