--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -193,7 +193,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/sace.png'"
         [desc]="'AI for balance sheets'"
-        [link]="'https://www.figma.com/proto/rYj52pvKKz3xHhuShXbEYm/2307_SAC?page-id=0%3A1&type=design&node-id=1-2&viewport=827%2C277%2C0.2&t=2KSkwk1RJGLYe3PF-1&scaling=scale-down&starting-point-node-id=1%3A2'">
+        [link]="'https://www.figma.com/proto/rYj52pvKKz3xHhuShXbEYm/2307_SAC?page-id=0%3A1&type=design&node-id=128-131&viewport=445%2C311%2C0.11&t=U2pW73BtcXloNee9-1&scaling=scale-down&starting-point-node-id=128%3A131&mode=design'">
       </app-project-btn>
     </div>
 
