--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -163,11 +163,17 @@
 
     <!-- mastercard -->
     <div class="col-6 col-md-4 col-xl-3">
-      <app-project-btn 
+      <app-project-multibtn 
         [imgSrc]="'/assets/img/mastercard.png'"
-        [desc]="'Dashboard finance'"
-        [link]="'https://www.figma.com/proto/SST0FK6x9rvl98UhXk5sXe/2304_MST?page-id=0%3A1&node-id=1-3&viewport=223%2C206%2C0.06&scaling=scale-down&starting-point-node-id=1%3A3'">
-      </app-project-btn>
+        [desc]="'Dashboard'"
+        [link]="[
+        'https://www.figma.com/proto/SST0FK6x9rvl98UhXk5sXe/2304_MST?page-id=0%3A1&node-id=1-3&viewport=223%2C206%2C0.06&scaling=scale-down&starting-point-node-id=1%3A3',
+        'https://www.figma.com/proto/wIYxUfY4pA3QwNKdM4AGBE/2312_MTU?page-id=0%3A1&type=design&node-id=12-2&viewport=563%2C-80%2C0.15&t=gVkkVfUH56SI8LA5-1&scaling=scale-down&starting-point-node-id=12%3A2&mode=design']"
+        [linksDesc]="[
+          'Finance',
+          'Tourism',
+        ]">
+      </app-project-multibtn>
     </div>
 
     <!-- chatto -->
@@ -203,6 +209,15 @@
         [imgSrc]="'/assets/img/showcase.png'"
         [desc]="'Solutions showcase'"
         [link]="'https://www.figma.com/proto/I9903lrDp4l3dGeHtvSl0z/2307_KW2?page-id=0%3A1&type=design&node-id=1-2&viewport=511%2C382%2C0.2&t=eCGHP1gJEEbZxFy4-1&scaling=scale-down&mode=design'">
+      </app-project-btn>
+    </div>
+
+    <!-- gedeon -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/gedeon.png'"
+        [desc]="'Forcasting'"
+        [link]="'https://www.figma.com/proto/2bzgYLdXxE1sjX1uVY41Bx/2312_GED?page-id=0%3A1&type=design&node-id=4-3&viewport=251%2C612%2C0.24&t=fmdF16I2bH0sUaRR-1&scaling=scale-down&starting-point-node-id=4%3A3&mode=design'">
       </app-project-btn>
     </div>
   </div>
