--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -166,7 +166,7 @@
       <app-project-multibtn 
         [imgSrc]="'/assets/img/mastercard.png'"
         [desc]="'Dashboard'"
-        [link]="[
+        [links]="[
         'https://www.figma.com/proto/SST0FK6x9rvl98UhXk5sXe/2304_MST?page-id=0%3A1&node-id=1-3&viewport=223%2C206%2C0.06&scaling=scale-down&starting-point-node-id=1%3A3',
         'https://www.figma.com/proto/wIYxUfY4pA3QwNKdM4AGBE/2312_MTU?page-id=0%3A1&type=design&node-id=12-2&viewport=563%2C-80%2C0.15&t=gVkkVfUH56SI8LA5-1&scaling=scale-down&starting-point-node-id=12%3A2&mode=design']"
         [linksDesc]="[
