[add] gedeon mockup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -217,7 +217,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/gedeon.png'"
         [desc]="'Forcasting'"
-        [link]="'https://www.figma.com/proto/2bzgYLdXxE1sjX1uVY41Bx/2312_GED?page-id=0%3A1&type=design&node-id=4-3&viewport=251%2C612%2C0.24&t=fmdF16I2bH0sUaRR-1&scaling=scale-down&starting-point-node-id=4%3A3&mode=design'">
+        [link]="'https://www.figma.com/proto/2bzgYLdXxE1sjX1uVY41Bx/2312_GED?page-id=0%3A1&type=design&node-id=99-180&viewport=-330%2C-54%2C0.36&t=aCn7iW8TVwJOlfW9-1&scaling=scale-down&starting-point-node-id=99%3A180&mode=design'">
       </app-project-btn>
     </div>
   </div>
