[add] all new links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/citterio.png'"
         [desc]="'Promozioni commerciali'"
-        [link]="'https://www.figma.com/proto/v7aeMazAhr3psfZV4GN5pe/2103_CIT?page-id=0%3A1&node-id=1%3A5&viewport=241%2C48%2C0.06&scaling=contain&starting-point-node-id=1%3A5'">
+        [link]="'https://www.figma.com/proto/v7aeMazAhr3psfZV4GN5pe/2103_CITTERIO_FORECAST?page-id=0%3A1&type=design&node-id=1-5&viewport=351%2C-137%2C0.1&t=XmfV5zzOiVOojUiE-1&scaling=min-zoom&starting-point-node-id=1%3A5&mode=design'">
       </app-project-btn>
     </div>
 
@@ -18,7 +18,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/barilla.png'"
         [desc]="'Promozioni commerciali'"
-        [link]="'https://www.figma.com/proto/IuizT55Bql8pMVcq22LnZW/2110_BAR?page-id=0%3A1&node-id=2%3A3&viewport=241%2C48%2C0.06&scaling=contain&starting-point-node-id=2%3A3'">
+        [link]="'https://www.figma.com/proto/IuizT55Bql8pMVcq22LnZW/2110_BARILLA_FORECAST?page-id=0%3A1&type=design&node-id=2-3&viewport=130%2C323%2C0.11&t=XoIAaefM0D9cijed-1&scaling=min-zoom&starting-point-node-id=2%3A3&mode=design'">
       </app-project-btn>
     </div>
 
@@ -27,7 +27,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/calendae.png'"
         [desc]="'Pipeline e timetracking'"
-        [link]="'https://www.figma.com/proto/JoEEiRShka27g3MyRvi2YR/2203_CDG?page-id=25%3A70&node-id=25%3A93&viewport=241%2C48%2C0.19&scaling=min-zoom&starting-point-node-id=25%3A93'">
+        [link]="'https://www.figma.com/proto/JoEEiRShka27g3MyRvi2YR/2203_CALENDAE_CDG?page-id=25%3A70&type=design&node-id=25-93&viewport=119%2C304%2C0.12&t=FUbAJZpYuGkFHGrW-1&scaling=min-zoom&starting-point-node-id=25%3A93&show-proto-sidebar=1&mode=design'">
       </app-project-btn>
     </div>
 
@@ -55,12 +55,12 @@
         [imgSrc]="'/assets/img/beyou.png'"
         [desc]="'People analytics'"
         [links]="[
-          'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=6%3A4&node-id=6%3A38&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=6%3A38',
-          'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BYO?page-id=0%3A1&node-id=2%3A3&viewport=241%2C48%2C0.1&scaling=scale-down&starting-point-node-id=2%3A3',
-          'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=244%3A1103&node-id=244%3A1104&viewport=241%2C48%2C0.4&scaling=scale-down&starting-point-node-id=244%3A1104',
-          'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BYP?page-id=459%3A532&node-id=459%3A533&viewport=241%2C48%2C0.52&scaling=min-zoom&starting-point-node-id=459%3A533',
-          'https://www.figma.com/proto/l8QqW5cNlQQI7erNWyBtDZ/2206_BY2?page-id=0%3A1&node-id=9%3A272&viewport=-49%2C216%2C0.09&scaling=min-zoom&starting-point-node-id=9%3A272',
-          'https://www.figma.com/proto/gGRQslVAhmzPa5us8eGTu9/2302_BYS?page-id=0%3A1&node-id=5-329&viewport=47%2C354%2C0.12&scaling=scale-down&starting-point-node-id=5%3A329'
+          'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BEYOU_OKR?page-id=6%3A4&type=design&node-id=6-38&viewport=-2344%2C752%2C0.83&t=AwhEfiTjD0jALpzs-1&scaling=scale-down&starting-point-node-id=6%3A38&mode=design',
+          'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BEYOU_OKR?page-id=0%3A1&type=design&node-id=2-3&viewport=191%2C672%2C0.17&t=XbyeunmReLhy5GVV-1&scaling=min-zoom&starting-point-node-id=2%3A3&mode=design',
+          'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BEYOU_CHALLENGE?page-id=244%3A1103&type=design&node-id=244-1104&viewport=63%2C245%2C0.55&t=KiLd83MfYu4dfDQ8-1&scaling=scale-down&starting-point-node-id=244%3A1104&mode=design',
+          'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BEYOU_CHALLENGE?page-id=459%3A532&type=design&node-id=459-533&viewport=227%2C418%2C0.09&t=KX458xLDImx36mYe-1&scaling=min-zoom&starting-point-node-id=459%3A533&mode=design',
+          'https://www.figma.com/proto/l8QqW5cNlQQI7erNWyBtDZ/2206_BEYOU_HOME?page-id=0%3A1&type=design&node-id=9-272&viewport=-74%2C296%2C0.12&t=3DgmzHWrQnt2s6GU-1&scaling=contain&starting-point-node-id=9%3A272&mode=design',
+          'https://www.figma.com/proto/gGRQslVAhmzPa5us8eGTu9/2302_BEYOU_SOCIAL?page-id=0%3A1&type=design&node-id=5-329&viewport=103%2C3%2C0.4&t=qah6fbvieWYW3Yg7-1&scaling=scale-down&starting-point-node-id=5%3A329&mode=design'
         ]"
         [linksDesc]="[
           'OKR mobile',
@@ -78,7 +78,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/bigbrain.png'"
         [desc]="'App hospitality'"
-        [link]="'https://www.figma.com/proto/A0tmvYaStvaxWYsccpoCTj/2104_BBA?page-id=0%3A1&node-id=2%3A3&viewport=241%2C48%2C0.19&scaling=scale-down&starting-point-node-id=2%3A3'">
+        [link]="'https://www.figma.com/proto/A0tmvYaStvaxWYsccpoCTj/2104_BIGBRAIN_APP?page-id=0%3A1&type=design&node-id=2-3&viewport=53%2C160%2C0.36&t=uCf1soSTl1QIsDyv-1&scaling=scale-down&starting-point-node-id=2%3A3&mode=design'">
       </app-project-btn>
     </div>
 
@@ -88,9 +88,9 @@
         [imgSrc]="'/assets/img/domya.png'"
         [desc]="'App hospitality'"
         [links]="[
-          'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOM?page-id=0%3A1&node-id=172%3A81&viewport=426%2C223%2C0.18&scaling=scale-down&starting-point-node-id=172%3A81',
-          'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOM?page-id=3%3A2&node-id=17%3A521&viewport=280%2C354%2C0.25&scaling=scale-down&starting-point-node-id=17%3A521',
-          'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOM?page-id=153%3A2&node-id=157%3A2&viewport=70%2C227%2C0.49&scaling=scale-down&starting-point-node-id=157%3A2'
+          'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOMYA_APP?page-id=0%3A1&type=design&node-id=172-81&viewport=230%2C341%2C0.22&t=e7MvzGrY1duSLG6l-1&scaling=scale-down&starting-point-node-id=172%3A81&mode=design',
+          'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOMYA_APP?page-id=3%3A2&type=design&node-id=17-521&viewport=125%2C379%2C0.08&t=jAr0mfiwU80zKQ05-1&scaling=scale-down&starting-point-node-id=17%3A521&mode=design',
+          'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOMYA_APP?page-id=153%3A2&type=design&node-id=157-2&viewport=137%2C438%2C0.23&t=GfjH8tLAiOnNckPi-1&scaling=contain&starting-point-node-id=157%3A2&mode=design'
         ]"
         [linksDesc]="[
           'App mobile',
@@ -130,7 +130,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/knowhere.png'"
         [desc]="'Knowledge sharing'"
-        [link]="'https://www.figma.com/proto/Pkuv9ydOKiM7iggcyBZVf3/2301_KWW?page-id=0%3A1&node-id=1-3&viewport=198%2C202%2C0.13&scaling=scale-down&starting-point-node-id=1%3A3'">
+        [link]="'https://www.figma.com/proto/Pkuv9ydOKiM7iggcyBZVf3/2301_KNOWHERE_KS?page-id=0%3A1&type=design&node-id=1-3&viewport=319%2C431%2C0.2&t=jtGXwp73eZ7Y9bi7-1&scaling=min-zoom&starting-point-node-id=1%3A3&mode=design'">
       </app-project-btn>
     </div>
 
@@ -139,7 +139,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/juventus.png'"
         [desc]="'Dashboard hospitality'"
-        [link]="'https://www.figma.com/proto/xd3t9GCmQN0qBfhhUcPX7t/JHotel?node-id=2-11&scaling=scale-down&page-id=0%3A1&starting-point-node-id=2%3A11'">
+        [link]="'https://www.figma.com/proto/xd3t9GCmQN0qBfhhUcPX7t/2303_JHOTEL_REVENUE?page-id=0%3A1&type=design&node-id=2-11&viewport=390%2C500%2C0.28&t=NiqY7z30YxKKnpza-1&scaling=scale-down&starting-point-node-id=2%3A11&mode=design'">
       </app-project-btn>
     </div>
 
@@ -148,7 +148,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/esg.png'"
         [desc]="'ESG surveys'"
-        [link]="'https://www.figma.com/proto/UHfkxqnHYe4TADhelVsZZC/Arwin?node-id=13-51&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=13%3A51'">
+        [link]="'https://www.figma.com/proto/dqmbGogq4zZPPB2W5EalCP/2403_ARWIN_ESG?page-id=0%3A1&type=design&node-id=13-51&viewport=1217%2C435%2C0.12&t=vSaojrhUZOFYyFv3-1&scaling=min-zoom&starting-point-node-id=13%3A51&mode=design'">
       </app-project-btn>
     </div>
 
@@ -157,7 +157,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/ermes.png'"
         [desc]="'Audit scheduling'"
-        [link]="'https://www.figma.com/proto/4BdTqm0EKWA5J5NEfFbSp7/Ermes?node-id=2-2&starting-point-node-id=2%3A2&scaling=scale-down'">
+        [link]="'https://www.figma.com/proto/gnDMiIZgOv3lG4Nx4B9wtW/2403_ERMES_AUDIT?page-id=0%3A1&type=design&node-id=2-2&viewport=378%2C491%2C0.2&t=WoT4vBx8ZaPVRnoy-1&scaling=min-zoom&starting-point-node-id=2%3A2&show-proto-sidebar=1&mode=design'">
       </app-project-btn>
     </div>
 
@@ -167,8 +167,8 @@
         [imgSrc]="'/assets/img/mastercard.png'"
         [desc]="'Dashboard'"
         [links]="[
-        'https://www.figma.com/proto/SST0FK6x9rvl98UhXk5sXe/2304_MST?page-id=0%3A1&node-id=1-3&viewport=223%2C206%2C0.06&scaling=scale-down&starting-point-node-id=1%3A3',
-        'https://www.figma.com/proto/wIYxUfY4pA3QwNKdM4AGBE/2312_MTU?page-id=0%3A1&type=design&node-id=92-1555&viewport=237%2C-550%2C0.13&t=WEQ6asEGqu6JE6iE-1&scaling=scale-down&starting-point-node-id=92%3A1555&mode=design']"
+        'https://www.figma.com/proto/SST0FK6x9rvl98UhXk5sXe/2304_MASTERCARD_MIM?page-id=0%3A1&type=design&node-id=1-3&viewport=160%2C268%2C0.05&t=mz8RT0345OkMA5Wd-1&scaling=scale-down&starting-point-node-id=1%3A3&mode=design',
+        'https://www.figma.com/proto/wIYxUfY4pA3QwNKdM4AGBE/2312_MASTERCARD_TURISMO?page-id=0%3A1&type=design&node-id=92-1555&viewport=455%2C48%2C0.05&t=tift9JESGzVe9FFH-1&scaling=scale-down&starting-point-node-id=92%3A1555&mode=design']"
         [linksDesc]="[
           'Finance',
           'Tourism',
@@ -199,7 +199,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/sace.png'"
         [desc]="'AI for balance sheets'"
-        [link]="'https://www.figma.com/proto/rYj52pvKKz3xHhuShXbEYm/2307_SAC?page-id=0%3A1&type=design&node-id=185-116&viewport=120%2C194%2C0.09&t=YsTJcFIW2d8esvsJ-1&scaling=scale-down&starting-point-node-id=185%3A116&mode=design'">
+        [link]="'https://www.figma.com/proto/rYj52pvKKz3xHhuShXbEYm/2307_CHATTO_SACE?page-id=0%3A1&type=design&node-id=185-116&viewport=294%2C195%2C0.1&t=zTks8xr7EKcY7cwo-1&scaling=scale-down&starting-point-node-id=185%3A116&mode=design'">
       </app-project-btn>
     </div>
 
@@ -208,7 +208,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/showcase.png'"
         [desc]="'Solutions showcase'"
-        [link]="'https://www.figma.com/proto/I9903lrDp4l3dGeHtvSl0z/2307_KW2?page-id=0%3A1&type=design&node-id=1-2&viewport=511%2C382%2C0.2&t=eCGHP1gJEEbZxFy4-1&scaling=scale-down&mode=design'">
+        [link]="'https://www.figma.com/proto/I9903lrDp4l3dGeHtvSl0z/2307_BIDX_UI?page-id=0%3A1&type=design&node-id=1-2&viewport=701%2C198%2C0.26&t=8uQNwVuYazyKsR4Q-1&scaling=scale-down&starting-point-node-id=1%3A2&mode=design'">
       </app-project-btn>
     </div>
 
@@ -217,7 +217,43 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/gedeon.png'"
         [desc]="'Forcasting'"
-        [link]="'https://www.figma.com/proto/2bzgYLdXxE1sjX1uVY41Bx/2312_GED?page-id=0%3A1&type=design&node-id=99-180&viewport=-330%2C-54%2C0.36&t=aCn7iW8TVwJOlfW9-1&scaling=scale-down&starting-point-node-id=99%3A180&mode=design'">
+        [link]="'https://www.figma.com/proto/2bzgYLdXxE1sjX1uVY41Bx/2312_GEDEON_PFP?page-id=0%3A1&type=design&node-id=99-180&viewport=277%2C390%2C0.11&t=zZnpbSaZIWuV47z1-1&scaling=scale-down&starting-point-node-id=99%3A180&mode=design'">
+      </app-project-btn>
+    </div>
+
+    <!-- esselunga -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/esselunga.png'"
+        [desc]="'Clustering'"
+        [link]="'https://www.figma.com/proto/xxY5wMkbxH95yMB8LSqqgW/2403_ESSELUNGA_CATEGORIZZATORE?page-id=0%3A1&type=design&node-id=2-2&viewport=479%2C450%2C0.24&t=f7GkWeyEjGUVKGcI-1&scaling=scale-down&starting-point-node-id=2%3A2&mode=design'">
+      </app-project-btn>
+    </div>
+
+    <!-- md -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/md.png'"
+        [desc]="'Clustering'"
+        [link]="'https://www.figma.com/proto/J8leCagcFIFga9eTCk0eK3/2403_MD_CATEGORIZZATORE?page-id=0%3A1&type=design&node-id=2-2&viewport=581%2C365%2C0.22&t=ZdI37p0ngZHRVqkT-1&scaling=scale-down&starting-point-node-id=2%3A2&mode=design'">
+      </app-project-btn>
+    </div>
+
+    <!-- chatto isp -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/isp.png'"
+        [desc]="'Generative AI'"
+        [link]="'https://www.figma.com/proto/siclruad9q0yctWjm8Qt7I/2403_CHATTO_ISP?page-id=0%3A1&type=design&node-id=2515-718&viewport=-100%2C852%2C0.25&t=ZRzTGPtLnDOhwQdS-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
+      </app-project-btn>
+    </div>
+
+    <!-- chatto bpm -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/bpm.png'"
+        [desc]="'Generative AI'"
+        [link]="'https://www.figma.com/proto/Hq8tlDAWH9FS9WMvBVA9Cf/2403_CHATTO_BPM?page-id=0%3A1&type=design&node-id=2515-718&viewport=284%2C597%2C0.27&t=vCzcqpZyOGhVez16-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
       </app-project-btn>
     </div>
   </div>
