[add] new links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/gemelli.png'"
         [desc]="'Dashboard clinica'"
-        [link]="'https://www.figma.com/proto/Iqaokcu7YJHoPwsTy13ZNC/ospedale-gemelli?page-id=0%3A1&node-id=2%3A2&viewport=241%2C48%2C0.28&scaling=min-zoom&starting-point-node-id=2%3A2'">
+        [link]="'https://www.figma.com/proto/q0JTnJ9kRpt56W85bsZj1r/2403_GEMELLI_DASHBOARD?page-id=0%3A1&type=design&node-id=2-2&viewport=166%2C469%2C0.31&t=Uxx7lYHbbAPkLOVM-1&scaling=min-zoom&starting-point-node-id=2%3A2&mode=design'">
       </app-project-btn>
     </div>
 
@@ -121,7 +121,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/dng.png'"
         [desc]="'Price tracker'"
-        [link]="'https://www.figma.com/proto/gTNdXAUX91ReFjKgLuPYsf/D%26G---Price-Tracker-Dashboard?node-id=1%3A36&scaling=scale-down&page-id=0%3A1'">
+        [link]="'https://www.figma.com/proto/kXT9zToAcdeh74fOhhLNvi/2403_D%26G_PRICETRACKER?page-id=0%3A1&type=design&node-id=1-36&viewport=-139%2C-555%2C0.28&t=l4hSndWh10VsfN2k-1&scaling=scale-down&starting-point-node-id=1%3A36&mode=design'">
       </app-project-btn>
     </div>
 
@@ -182,9 +182,9 @@
         [imgSrc]="'/assets/img/chatto.png'"
         [desc]="'Generative AI'"
         [links]="[
-          'https://www.figma.com/proto/osGY6Faiye05jSdtPgLj4L/Chatto-Platform?page-id=0%3A1&type=design&node-id=11-60&viewport=371%2C95%2C0.12&scaling=scale-down&starting-point-node-id=11%3A60',
-          'https://www.figma.com/proto/osGY6Faiye05jSdtPgLj4L/Chatto-Platform?page-id=99%3A553&type=design&node-id=99-636&viewport=1158%2C282%2C0.65&scaling=scale-down&starting-point-node-id=1%3A2',
-          'https://www.figma.com/proto/osGY6Faiye05jSdtPgLj4L/Chatto-Platform?page-id=120%3A1686&type=design&node-id=120-1754&viewport=1243%2C491%2C0.64&scaling=scale-down&starting-point-node-id=120%3A1754'
+          'https://www.figma.com/proto/45urqTI8SWCYEp8uMo6Rvi/2403_CHATTO_PRODUCT?page-id=0%3A1&type=design&node-id=99-441&viewport=160%2C70%2C0.1&t=GbUJgzDX4W9FkT35-1&scaling=scale-down&starting-point-node-id=99%3A441&mode=design',
+          'https://www.figma.com/proto/45urqTI8SWCYEp8uMo6Rvi/2403_CHATTO_PRODUCT?page-id=99%3A553&type=design&node-id=305-1384&viewport=864%2C66%2C0.2&t=TMQyJhVsbhsRNZ66-1&scaling=scale-down&starting-point-node-id=305%3A1384&mode=design',
+          'https://www.figma.com/proto/45urqTI8SWCYEp8uMo6Rvi/2403_CHATTO_PRODUCT?page-id=120%3A1686&type=design&node-id=120-1754&viewport=1318%2C469%2C0.38&t=FJLMVHwny65ULhW3-1&scaling=scale-down&mode=design'
         ]"
         [linksDesc]="[
           'Builder',
