[add] new word for chatto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -243,7 +243,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/isp.png'"
-        [desc]="'Generative AI'"
+        [desc]="'Personal banker Generative AI'"
         [link]="'https://www.figma.com/proto/siclruad9q0yctWjm8Qt7I/2403_CHATTO_ISP?page-id=0%3A1&type=design&node-id=2515-718&viewport=-100%2C852%2C0.25&t=ZRzTGPtLnDOhwQdS-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
       </app-project-btn>
     </div>
@@ -252,7 +252,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/bpm.png'"
-        [desc]="'Generative AI'"
+        [desc]="'Personal banker Generative AI'"
         [link]="'https://www.figma.com/proto/Hq8tlDAWH9FS9WMvBVA9Cf/2403_CHATTO_BPM?page-id=0%3A1&type=design&node-id=2515-718&viewport=284%2C597%2C0.27&t=vCzcqpZyOGhVez16-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
       </app-project-btn>
     </div>
