--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/citterio.png'"
-        [desc]="'Promozioni commerciali'"
+        [desc]="'Commercial Promotions'"
         [link]="'https://www.figma.com/proto/v7aeMazAhr3psfZV4GN5pe/2103_CITTERIO_FORECAST?page-id=0%3A1&type=design&node-id=1-5&viewport=351%2C-137%2C0.1&t=XmfV5zzOiVOojUiE-1&scaling=min-zoom&starting-point-node-id=1%3A5&mode=design'">
       </app-project-btn>
     </div>
@@ -17,7 +17,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/barilla.png'"
-        [desc]="'Promozioni commerciali'"
+        [desc]="'Commercial Promotions'"
         [link]="'https://www.figma.com/proto/IuizT55Bql8pMVcq22LnZW/2110_BARILLA_FORECAST?page-id=0%3A1&type=design&node-id=2-3&viewport=130%2C323%2C0.11&t=XoIAaefM0D9cijed-1&scaling=min-zoom&starting-point-node-id=2%3A3&mode=design'">
       </app-project-btn>
     </div>
@@ -26,7 +26,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/calendae.png'"
-        [desc]="'Pipeline e timetracking'"
+        [desc]="'Pipeline & Timetracking'"
         [link]="'https://www.figma.com/proto/JoEEiRShka27g3MyRvi2YR/2203_CALENDAE_CDG?page-id=25%3A70&type=design&node-id=25-93&viewport=119%2C304%2C0.12&t=FUbAJZpYuGkFHGrW-1&scaling=min-zoom&starting-point-node-id=25%3A93&show-proto-sidebar=1&mode=design'">
       </app-project-btn>
     </div>
@@ -35,7 +35,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/gemelli.png'"
-        [desc]="'Dashboard clinica'"
+        [desc]="'Clinical Dashboard'"
         [link]="'https://www.figma.com/proto/q0JTnJ9kRpt56W85bsZj1r/2403_GEMELLI_DASHBOARD?page-id=0%3A1&type=design&node-id=2-2&viewport=166%2C469%2C0.31&t=Uxx7lYHbbAPkLOVM-1&scaling=min-zoom&starting-point-node-id=2%3A2&mode=design'">
       </app-project-btn>
     </div>
@@ -53,7 +53,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-multibtn 
         [imgSrc]="'/assets/img/beyou.png'"
-        [desc]="'People analytics'"
+        [desc]="'People Analytics'"
         [links]="[
           'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BEYOU_OKR?page-id=6%3A4&type=design&node-id=6-38&viewport=-2344%2C752%2C0.83&t=AwhEfiTjD0jALpzs-1&scaling=scale-down&starting-point-node-id=6%3A38&mode=design',
           'https://www.figma.com/proto/bNECwbVJNIOy7jhZezFPPA/2111_BEYOU_OKR?page-id=0%3A1&type=design&node-id=2-3&viewport=191%2C672%2C0.17&t=XbyeunmReLhy5GVV-1&scaling=min-zoom&starting-point-node-id=2%3A3&mode=design',
@@ -77,7 +77,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/bigbrain.png'"
-        [desc]="'App hospitality'"
+        [desc]="'App Hospitality'"
         [link]="'https://www.figma.com/proto/A0tmvYaStvaxWYsccpoCTj/2104_BIGBRAIN_APP?page-id=0%3A1&type=design&node-id=2-3&viewport=53%2C160%2C0.36&t=uCf1soSTl1QIsDyv-1&scaling=scale-down&starting-point-node-id=2%3A3&mode=design'">
       </app-project-btn>
     </div>
@@ -86,7 +86,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-multibtn 
         [imgSrc]="'/assets/img/domya.png'"
-        [desc]="'App hospitality'"
+        [desc]="'App Hospitality'"
         [links]="[
           'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOMYA_APP?page-id=0%3A1&type=design&node-id=172-81&viewport=230%2C341%2C0.22&t=e7MvzGrY1duSLG6l-1&scaling=scale-down&starting-point-node-id=172%3A81&mode=design',
           'https://www.figma.com/proto/alxID3lpC3pKMMDexhCBAE/2209_DOMYA_APP?page-id=3%3A2&type=design&node-id=17-521&viewport=125%2C379%2C0.08&t=jAr0mfiwU80zKQ05-1&scaling=scale-down&starting-point-node-id=17%3A521&mode=design',
@@ -104,7 +104,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-multibtn 
         [imgSrc]="'/assets/img/isp.png'"
-        [desc]="'File system explorer'"
+        [desc]="'File System Explorer'"
         [links]="[
           'https://github.com/bidcompany/file-system-explorer-frontend',
           'https://github.com/bidcompany/file-system-explorer-backend',
@@ -120,7 +120,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/dng.png'"
-        [desc]="'Price tracker'"
+        [desc]="'Price Tracker'"
         [link]="'https://www.figma.com/proto/kXT9zToAcdeh74fOhhLNvi/2403_D%26G_PRICETRACKER?page-id=0%3A1&type=design&node-id=1-36&viewport=-139%2C-555%2C0.28&t=l4hSndWh10VsfN2k-1&scaling=scale-down&starting-point-node-id=1%3A36&mode=design'">
       </app-project-btn>
     </div>
@@ -129,7 +129,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/knowhere.png'"
-        [desc]="'Knowledge sharing'"
+        [desc]="'Knowledge Sharing'"
         [link]="'https://www.figma.com/proto/Pkuv9ydOKiM7iggcyBZVf3/2301_KNOWHERE_KS?page-id=0%3A1&type=design&node-id=1-3&viewport=319%2C431%2C0.2&t=jtGXwp73eZ7Y9bi7-1&scaling=min-zoom&starting-point-node-id=1%3A3&mode=design'">
       </app-project-btn>
     </div>
@@ -138,7 +138,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/juventus.png'"
-        [desc]="'Dashboard hospitality'"
+        [desc]="'Dashboard Hospitality'"
         [link]="'https://www.figma.com/proto/xd3t9GCmQN0qBfhhUcPX7t/2303_JHOTEL_REVENUE?page-id=0%3A1&type=design&node-id=2-11&viewport=390%2C500%2C0.28&t=NiqY7z30YxKKnpza-1&scaling=scale-down&starting-point-node-id=2%3A11&mode=design'">
       </app-project-btn>
     </div>
@@ -147,7 +147,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/esg.png'"
-        [desc]="'ESG surveys'"
+        [desc]="'ESG Surveys'"
         [link]="'https://www.figma.com/proto/dqmbGogq4zZPPB2W5EalCP/2403_ARWIN_ESG?page-id=0%3A1&type=design&node-id=13-51&viewport=1217%2C435%2C0.12&t=vSaojrhUZOFYyFv3-1&scaling=min-zoom&starting-point-node-id=13%3A51&mode=design'">
       </app-project-btn>
     </div>
@@ -156,7 +156,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/ermes.png'"
-        [desc]="'Audit scheduling'"
+        [desc]="'Audit Scheduling'"
         [link]="'https://www.figma.com/proto/gnDMiIZgOv3lG4Nx4B9wtW/2403_ERMES_AUDIT?page-id=0%3A1&type=design&node-id=2-2&viewport=378%2C491%2C0.2&t=WoT4vBx8ZaPVRnoy-1&scaling=min-zoom&starting-point-node-id=2%3A2&show-proto-sidebar=1&mode=design'">
       </app-project-btn>
     </div>
@@ -198,7 +198,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/sace.png'"
-        [desc]="'AI for balance sheets'"
+        [desc]="'AI For Balance Sheets'"
         [link]="'https://www.figma.com/proto/rYj52pvKKz3xHhuShXbEYm/2307_CHATTO_SACE?page-id=0%3A1&type=design&node-id=185-116&viewport=294%2C195%2C0.1&t=zTks8xr7EKcY7cwo-1&scaling=scale-down&starting-point-node-id=185%3A116&mode=design'">
       </app-project-btn>
     </div>
@@ -207,7 +207,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/showcase.png'"
-        [desc]="'Solutions showcase'"
+        [desc]="'Solutions Showcase'"
         [link]="'https://www.figma.com/proto/I9903lrDp4l3dGeHtvSl0z/2307_BIDX_UI?page-id=0%3A1&type=design&node-id=1-2&viewport=701%2C198%2C0.26&t=8uQNwVuYazyKsR4Q-1&scaling=scale-down&starting-point-node-id=1%3A2&mode=design'">
       </app-project-btn>
     </div>
@@ -216,7 +216,7 @@
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/gedeon.png'"
-        [desc]="'Forcasting'"
+        [desc]="'Forecasting'"
         [link]="'https://www.figma.com/proto/2bzgYLdXxE1sjX1uVY41Bx/2312_GEDEON_PFP?page-id=0%3A1&type=design&node-id=99-180&viewport=277%2C390%2C0.11&t=zZnpbSaZIWuV47z1-1&scaling=scale-down&starting-point-node-id=99%3A180&mode=design'">
       </app-project-btn>
     </div>
@@ -235,25 +235,25 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/md.png'"
         [desc]="'Clustering'"
-        [link]="'https://www.figma.com/proto/J8leCagcFIFga9eTCk0eK3/2403_MD_CATEGORIZZATORE?page-id=0%3A1&type=design&node-id=2-2&viewport=581%2C365%2C0.22&t=ZdI37p0ngZHRVqkT-1&scaling=scale-down&starting-point-node-id=2%3A2&mode=design'">
+        [link]="'https://www.figma.com/proto/J8leCagcFIFga9eTCk0eK3/2403_MD_CATEGORIZZATORE?page-id=0%3A1&type=design&node-id=2-2&viewport=252%2C333%2C0.13&t=N7IZmR5ahX9l5q5J-1&scaling=scale-down&starting-point-node-id=2%3A2&mode=design'">
       </app-project-btn>
     </div>
 
-    <!-- chatto isp -->
+    <!-- personal banker isp -->
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/isp.png'"
-        [desc]="'Personal banker Generative AI'"
-        [link]="'https://www.figma.com/proto/siclruad9q0yctWjm8Qt7I/2403_CHATTO_ISP?page-id=0%3A1&type=design&node-id=2515-718&viewport=-100%2C852%2C0.25&t=ZRzTGPtLnDOhwQdS-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
+        [desc]="'Personal Banker Generative AI'"
+        [link]="'https://www.figma.com/proto/siclruad9q0yctWjm8Qt7I/2403_ISP_PBANKER?page-id=0%3A1&type=design&node-id=2515-718&viewport=238%2C482%2C0.12&t=QIxmUwnaKydDJuUS-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
       </app-project-btn>
     </div>
 
-    <!-- chatto bpm -->
+    <!-- personal banker bpm -->
     <div class="col-6 col-md-4 col-xl-3">
       <app-project-btn 
         [imgSrc]="'/assets/img/bpm.png'"
-        [desc]="'Personal banker Generative AI'"
-        [link]="'https://www.figma.com/proto/Hq8tlDAWH9FS9WMvBVA9Cf/2403_CHATTO_BPM?page-id=0%3A1&type=design&node-id=2515-718&viewport=284%2C597%2C0.27&t=vCzcqpZyOGhVez16-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
+        [desc]="'Personal Banker Generative AI'"
+        [link]="'https://www.figma.com/proto/Hq8tlDAWH9FS9WMvBVA9Cf/2403_BPM_PBANKER?page-id=0%3A1&type=design&node-id=2515-718&viewport=204%2C464%2C0.1&t=xzTLJWA0foNfly9q-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
       </app-project-btn>
     </div>
   </div>
