--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -148,7 +148,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/esg.png'"
         [desc]="'ESG Surveys'"
-        [link]="'https://www.figma.com/proto/dqmbGogq4zZPPB2W5EalCP/2403_ARWIN_ESG?page-id=0%3A1&type=design&node-id=13-51&viewport=1217%2C435%2C0.12&t=vSaojrhUZOFYyFv3-1&scaling=min-zoom&starting-point-node-id=13%3A51&mode=design'">
+        [link]="'https://www.figma.com/proto/dqmbGogq4zZPPB2W5EalCP/2403_ARWIN_ESG?page-id=0%3A1&type=design&node-id=13-51&viewport=1217%2C435%2C0.12&t=jU0EIDeYkjXrmTtV-1&scaling=min-zoom&starting-point-node-id=13%3A51&mode=design'">
       </app-project-btn>
     </div>
 
@@ -157,7 +157,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/ermes.png'"
         [desc]="'Audit Scheduling'"
-        [link]="'https://www.figma.com/proto/gnDMiIZgOv3lG4Nx4B9wtW/2403_ERMES_AUDIT?page-id=0%3A1&type=design&node-id=2-2&viewport=378%2C491%2C0.2&t=WoT4vBx8ZaPVRnoy-1&scaling=min-zoom&starting-point-node-id=2%3A2&show-proto-sidebar=1&mode=design'">
+        [link]="'https://www.figma.com/proto/gnDMiIZgOv3lG4Nx4B9wtW/2403_ERMES_AUDIT?page-id=0%3A1&type=design&node-id=2-2&viewport=378%2C491%2C0.2&t=Jlmoe01CgD23IJoe-1&scaling=min-zoom&starting-point-node-id=2%3A2&show-proto-sidebar=1&mode=design'">
       </app-project-btn>
     </div>
 
@@ -235,7 +235,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/md.png'"
         [desc]="'Clustering'"
-        [link]="'https://www.figma.com/proto/J8leCagcFIFga9eTCk0eK3/2403_MD_CATEGORIZZATORE?page-id=0%3A1&type=design&node-id=2-2&viewport=252%2C333%2C0.13&t=N7IZmR5ahX9l5q5J-1&scaling=scale-down&starting-point-node-id=2%3A2&mode=design'">
+        [link]="'https://www.figma.com/proto/J8leCagcFIFga9eTCk0eK3/2403_MD_CATEGORIZZATORE?page-id=0%3A1&type=design&node-id=2-2&viewport=343%2C451%2C0.18&t=8deqfK5eKLYV2r4z-1&scaling=scale-down&starting-point-node-id=2%3A2&mode=design'">
       </app-project-btn>
     </div>
 
@@ -244,7 +244,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/isp.png'"
         [desc]="'Personal Banker Generative AI'"
-        [link]="'https://www.figma.com/proto/siclruad9q0yctWjm8Qt7I/2403_ISP_PBANKER?page-id=0%3A1&type=design&node-id=2515-718&viewport=238%2C482%2C0.12&t=QIxmUwnaKydDJuUS-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
+        [link]="'https://www.figma.com/proto/siclruad9q0yctWjm8Qt7I/2403_ISP_PBANKER?page-id=0%3A1&type=design&node-id=2515-718&viewport=323%2C660%2C0.17&t=safzIHCpqg8ZBmRc-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
       </app-project-btn>
     </div>
 
@@ -253,7 +253,7 @@
       <app-project-btn 
         [imgSrc]="'/assets/img/bpm.png'"
         [desc]="'Personal Banker Generative AI'"
-        [link]="'https://www.figma.com/proto/Hq8tlDAWH9FS9WMvBVA9Cf/2403_BPM_PBANKER?page-id=0%3A1&type=design&node-id=2515-718&viewport=204%2C464%2C0.1&t=xzTLJWA0foNfly9q-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
+        [link]="'https://www.figma.com/proto/Hq8tlDAWH9FS9WMvBVA9Cf/2403_BPM_PBANKER?page-id=0%3A1&type=design&node-id=2515-718&viewport=274%2C635%2C0.14&t=tzB7sNDlOslWdjUh-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
       </app-project-btn>
     </div>
   </div>
