[add] new mockups

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,15 +60,17 @@
           'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BEYOU_CHALLENGE?page-id=244%3A1103&type=design&node-id=244-1104&viewport=63%2C245%2C0.55&t=KiLd83MfYu4dfDQ8-1&scaling=scale-down&starting-point-node-id=244%3A1104&mode=design',
           'https://www.figma.com/proto/nZVqY2CTizcb268303naM8/2203_BEYOU_CHALLENGE?page-id=459%3A532&type=design&node-id=459-533&viewport=227%2C418%2C0.09&t=KX458xLDImx36mYe-1&scaling=min-zoom&starting-point-node-id=459%3A533&mode=design',
           'https://www.figma.com/proto/l8QqW5cNlQQI7erNWyBtDZ/2206_BEYOU_HOME?page-id=0%3A1&type=design&node-id=9-272&viewport=-74%2C296%2C0.12&t=3DgmzHWrQnt2s6GU-1&scaling=contain&starting-point-node-id=9%3A272&mode=design',
-          'https://www.figma.com/proto/gGRQslVAhmzPa5us8eGTu9/2302_BEYOU_SOCIAL?page-id=0%3A1&type=design&node-id=5-329&viewport=103%2C3%2C0.4&t=qah6fbvieWYW3Yg7-1&scaling=scale-down&starting-point-node-id=5%3A329&mode=design'
-        ]"
+          'https://www.figma.com/proto/gGRQslVAhmzPa5us8eGTu9/2302_BEYOU_SOCIAL?page-id=0%3A1&type=design&node-id=5-329&viewport=103%2C3%2C0.4&t=qah6fbvieWYW3Yg7-1&scaling=scale-down&starting-point-node-id=5%3A329&mode=design',
+          'https://www.figma.com/proto/t3O3lhk8lv7sqGtTYJFkgU/2407_BEYOU_WIKI?page-id=0%3A1&node-id=1-98&p=f&viewport=-104%2C113%2C0.15&t=TuxVc9PXpNLOxeW2-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A98'
+          ]"
         [linksDesc]="[
           'OKR mobile',
           'OKR desktop',
           'Challenge mobile',
           'Challenge desktop',
           'Webapp v2',
-          'Social'
+          'Social',
+          'Wiki'
         ]">
       </app-project-multibtn>
     </div>
@@ -254,6 +256,33 @@
         [imgSrc]="'/assets/img/bpm.png'"
         [desc]="'Personal Banker Generative AI'"
         [link]="'https://www.figma.com/proto/Hq8tlDAWH9FS9WMvBVA9Cf/2403_BPM_PBANKER?page-id=0%3A1&type=design&node-id=2515-718&viewport=274%2C635%2C0.14&t=tzB7sNDlOslWdjUh-1&scaling=scale-down&starting-point-node-id=2515%3A718&mode=design'">
+      </app-project-btn>
+    </div>
+
+    <!-- dashboard finance -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/bper.png'"
+        [desc]="'Dashboard Finance'"
+        [link]="'https://www.figma.com/proto/cwRLmI9CyvHTaZDrdQQfwF/2411_BPER_MASTERCARD?page-id=0%3A1&node-id=918-5419&p=f&viewport=187%2C29%2C0.03&t=SwH9Els2E1D4j6jG-1&scaling=contain&content-scaling=fixed&starting-point-node-id=918%3A5419'">
+      </app-project-btn>
+    </div>
+
+    <!-- think erp -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/think.png'"
+        [desc]="'AI ERP'"
+        [link]="'https://www.figma.com/proto/5PcfWpFrTyHzgrbJt04gG6/2410_THINK?page-id=150%3A1244&node-id=150-2469&p=f&viewport=198%2C178%2C0.03&t=CU7cJ4ZPjbGZMK13-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=172%3A4825'">
+      </app-project-btn>
+    </div>
+
+    <!-- cattleya ai -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/cattleya.png'"
+        [desc]="'AI Tools'"
+        [link]="'https://www.figma.com/proto/jMgdJmGOi7Ll3zRTwPO7Fb/2501_CATTLEYA?page-id=0%3A1&node-id=165-21&p=f&viewport=335%2C140%2C0.02&t=n6s3vaaedB4nh5kS-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=165%3A21'">
       </app-project-btn>
     </div>
   </div>
