--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -285,6 +285,15 @@
         [link]="'https://www.figma.com/proto/jMgdJmGOi7Ll3zRTwPO7Fb/2501_CATTLEYA?page-id=0%3A1&node-id=165-21&p=f&viewport=335%2C140%2C0.02&t=n6s3vaaedB4nh5kS-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=165%3A21'">
       </app-project-btn>
     </div>
+
+    <!-- 8mila -->
+    <div class="col-6 col-md-4 col-xl-3">
+      <app-project-btn 
+        [imgSrc]="'/assets/img/8mila.png'"
+        [desc]="'Dashboard Performance'"
+        [link]="'https://www.figma.com/proto/RLogw7yPvYQAWiEG6yBzjz/2305_8MILA_DWH?page-id=0%3A1&node-id=28-2&p=f&viewport=125%2C85%2C0.04&t=ZFu3OoIH7PgmB1dJ-1&scaling=contain&content-scaling=fixed&starting-point-node-id=28%3A2'">
+      </app-project-btn>
+    </div>
   </div>
   
   <router-outlet></router-outlet>
